hphp/test/quick/hh_bad_end.php.expectf

Fatal error: HH mode: ?> not allowed (Line: %d, Char: %d)
syntax error, unexpected T_HH_ERROR, expecting $end in %s on line 2
